--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,13 @@
   <header class="header">
     <div class="header__logo-box">
       <span class="header__logo">
-        Byticular
+        <a class="link" href="index.html">Byticular</a>
       </span>
     </div>
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__item"><a href="#" class="nav__link btn btn--text">Features</a></li>
-        <li class="nav__item"><a href="#" class="nav__link btn btn--secondary">Get Started</a></li>
+        <li class="nav__item"><a href="sign-up.html" class="nav__link btn btn--secondary">Get Started</a></li>
       </ul>
     </nav>
   </header>
@@ -172,6 +172,7 @@
 
   </main>
 
+  <!-- ? FOOTER -->
   <footer class="footer">
     <div class="container container--footer">
       <div class="row">
@@ -184,23 +185,23 @@
         <div class="col col-1-of-4">
           <div class="footer__block">
             <p class="text text--light text--bold u-mb-xs">Product</p>
-            <a href="#" class="link text--light u-mb-xs">All Features</a>
-            <a href="#" class="link text--light u-mb-xs">Contribute</a>
-            <a href="#" class="link text--light u-mb-xs">Support</a>
+            <a href="#" class="link link--light u-mb-xs">All Features</a>
+            <a href="#" class="link link--light u-mb-xs">Contribute</a>
+            <a href="#" class="link link--light u-mb-xs">Support</a>
           </div>
         </div>
         <div class="col col-1-of-4">
           <div class="footer__block">
             <p class="text text--light text--bold u-mb-xs">Connect</p>
-            <a href="mailto:blessedmattzulu@gmail.com" class="link text--light u-mb-xs">Email</a>
-            <a href="#" class="link text--light u-mb-xs">Twitter</a>
+            <a href="mailto:blessedmattzulu@gmail.com" class="link link--light u-mb-xs">Email</a>
+            <a href="#" class="link link--light u-mb-xs">Twitter</a>
           </div>
         </div>
         <div class="col col-1-of-4">
           <div class="footer__block">
             <p class="text text--light text--bold u-mb-xs">Legal</p>
-            <a href="#" class="link text--light u-mb-xs">Terms of Use</a>
-            <a href="#" class="link text--light u-mb-xs">Privacy Policy</a>
+            <a href="#" class="link link--light u-mb-xs">Terms of Use</a>
+            <a href="#" class="link link--light u-mb-xs">Privacy Policy</a>
           </div>
         </div>
       </div>
