Minor changes and fixes - Updated npm scripts in package.json with correct directory names - Updated base project colors - Added log in option to sign up screen - Updated .gitignore to include CSS build process files

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Byticular – Coding Tests Modernised </title>
 
+  <!-- Import Google Font -->
+
+
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -21,7 +24,7 @@
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__item"><a href="#" class="nav__link btn btn--text">Features</a></li>
-        <li class="nav__item"><a href="sign-up.html" class="nav__link btn btn--secondary">Get Started</a></li>
+        <li class="nav__item"><a href="sign-up.html" class="nav__link btn btn--secondary">Sign Up</a></li>
       </ul>
     </nav>
   </header>
@@ -34,8 +37,10 @@
         <div class="row">
           <div class="col col-1-of-2">
             <h1 class="heading heading--primary u-mb-sm">The Modern Coding Instructor's Toolkit</h1>
-            <p class="text text--md u-mb-md">Simplify how you assess your students' coding knowledge intuitive
-              programming tests that can be customised to suit your teaching needs.</p>
+            <p class="text text--md u-mb-md">
+              Simplify how you assess your students' coding knowledge using intuitive
+              programming tests that can be customised to suit your teaching needs.
+            </p>
             <a href="#" class="btn btn--primary">Get Started</a>
           </div>
           <div class="col col-1-of-2">
@@ -70,13 +75,8 @@
               </div>
               <h3 class="heading heading--tertiaty u-mb-sm u-center-text">Customisable Tests</h3>
               <p class="text">
-                Create custom coding
-                tests and specify the editor
-                features you want a test to
-                feature. Give your students
-                the full IDE experience or let
-                them code in a barebones
-                Notepad environment.
+                Create custom coding tests and specify the editor features you want a test to feature. Give your
+                students the full IDE experience or let them code in a barebones Notepad environment.
               </p>
             </div>
           </div>
