--- a/src/sign-up.html
+++ b/src/sign-up.html
@@ -21,7 +21,7 @@
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__item"><a href="#" class="nav__link btn btn--text">Features</a></li>
-        <li class="nav__item"><a href="#" class="nav__link btn btn--secondary">Get Started</a></li>
+        <li class="nav__item"><a href="#" class="nav__link btn btn--secondary">Sign Up</a></li>
       </ul>
     </nav>
   </header>
@@ -56,7 +56,7 @@
               </div>
               <div class="form__group">
                 <label for="email" class="form__label">Email</label>
-                <input type="email" name="email" class="form__input" id="email" placeholder="you@mail.com" required>
+                <input type="email" name="email" class="form__input" id="email" placeholder="you@email.com" required>
               </div>
               <div class="form__group">
                 <label for="password" class="form__label">Password</label>
@@ -76,6 +76,8 @@
               <div class="form__group">
                 <a href="#" class="btn btn--primary btn--submit" type="submit" name="sign-up">Sign Up</a>
               </div>
+              <p class="text">Already have an account? <a href="log-in.html" class="link link--highlighted">Log in.</a>
+              </p>
             </form>
           </div>
         </div>
