Minor changes and fixes - Added log in link in main navigation - Updated all link classes to .link for uniformity

--- a/src/sign-up.html
+++ b/src/sign-up.html
@@ -20,8 +20,9 @@
     </div>
     <nav class="nav">
       <ul class="nav__list">
-        <li class="nav__item"><a href="#" class="nav__link btn btn--text">Features</a></li>
-        <li class="nav__item"><a href="#" class="nav__link btn btn--secondary">Sign Up</a></li>
+        <li class="nav__item"><a href="#" class="nav__link link">Features</a></li>
+        <li class="nav__item"><a href="log-in.html" class="nav__link link">Log In</a></li>
+        <li class="nav__item"><a href="sign-up.html" class="nav__link btn btn--secondary">Sign Up</a></li>
       </ul>
     </nav>
   </header>
@@ -60,7 +61,7 @@
               </div>
               <div class="form__group">
                 <label for="password" class="form__label">Password</label>
-                <input type="text" name="password" class="form__input" placeholder="Choose a password" required>
+                <input type="password" name="password" class="form__input" placeholder="Choose a password" required>
               </div>
               <div class="form__group">
                 <label for="agree" class="form__label">Terms & Conditions</label>
