--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,8 @@
     </div>
     <nav class="nav">
       <ul class="nav__list">
-        <li class="nav__item"><a href="#" class="nav__link btn btn--text">Features</a></li>
+        <li class="nav__item"><a href="#" class="nav__link link">Features</a></li>
+        <li class="nav__item"><a href="log-in.html" class="nav__link link">Log In</a></li>
         <li class="nav__item"><a href="sign-up.html" class="nav__link btn btn--secondary">Sign Up</a></li>
       </ul>
     </nav>
