Added a logo and favicon - Created a simple logo and favicon and added them to the site

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Byticular – Coding Tests Modernised </title>
 
+  <!-- ? Import Favicon -->
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+
   <!-- ? Import Google Font -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,200;0,400;0,700;1,400&display=swap"
@@ -20,9 +24,11 @@
   <!-- ? HEADER -->
   <header class="header">
     <div class="header__logo-box">
-      <span class="header__logo">
-        <a class="link" href="index.html">Byticular</a>
-      </span>
+      <a class="link" href="index.html">
+        <svg class="logo logo--header">
+          <use xlink:href="img/icons/icons.svg#icon-logo" href="img/icons/icons.svg#icon-logo"></use>
+        </svg>
+      </a>
     </div>
     <nav class="nav">
       <ul class="nav__list">
