Added a homescreen/dashboard - This is the screen a user will see once signed in

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 
 <body>
   <!-- ? HEADER -->
-  <header class="header">
+  <header class="header header--fixed">
     <div class="header__logo-box">
       <a class="link" href="index.html">
         <svg class="logo logo--header">
